tests/machine/x/cpp/group_by_sort.error
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:21: error: no match for ‘operator==’ (operand types are ‘std::any’ and ‘std::any’)
  146 |         if (__g.key == __key) {
      |             ~~~~~~~ ^~ ~~~~~
      |                 |      |
      |                 |      std::any
      |                 std::any
In file included from /usr/include/c++/13/bits/stl_algobase.h:64,
                 from /usr/include/c++/13/algorithm:60,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:2:
/usr/include/c++/13/bits/stl_pair.h:812:5: note: candidate: ‘template<class _T1, class _T2> constexpr bool std::operator==(const pair<_T1, _T2>&, const pair<_T1, _T2>&)’
  812 |     operator==(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_pair.h:812:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   ‘std::any’ is not derived from ‘const std::pair<_T1, _T2>’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:67:
/usr/include/c++/13/bits/stl_iterator.h:448:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_Iterator>&)’
  448 |     operator==(const reverse_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:448:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  493 |     operator==(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1678 |     operator==(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorL>&)’
 1748 |     operator==(const move_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/iosfwd:42,
                 from /usr/include/c++/13/ios:40,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:4:
/usr/include/c++/13/bits/postypes.h:192:5: note: candidate: ‘template<class _StateT> bool std::operator==(const fpos<_StateT>&, const fpos<_StateT>&)’
  192 |     operator==(const fpos<_StateT>& __lhs, const fpos<_StateT>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/postypes.h:192:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   ‘std::any’ is not derived from ‘const std::fpos<_StateT>’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/string:43,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44:
/usr/include/c++/13/bits/allocator.h:237:5: note: candidate: ‘template<class _T1, class _T2> bool std::operator==(const allocator<_CharT>&, const allocator<_T2>&)’
  237 |     operator==(const allocator<_T1>&, const allocator<_T2>&)
      |     ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   ‘std::any’ is not derived from ‘const std::allocator<_CharT>’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/basic_string.h:47,
                 from /usr/include/c++/13/string:54:
/usr/include/c++/13/string_view:609:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, basic_string_view<_CharT, _Traits>)’
  609 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:609:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/string_view:616:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, __type_identity_t<basic_string_view<_CharT, _Traits> >)’
  616 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:616:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/string_view:642:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(__type_identity_t<basic_string_view<_CharT, _Traits> >, basic_string_view<_CharT, _Traits>)’
  642 |     operator==(__type_identity_t<basic_string_view<_CharT, _Traits>> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:642:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3710 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3727 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3774 |     operator==(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   mismatched types ‘const _CharT*’ and ‘std::any’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/memory_resource.h:47,
                 from /usr/include/c++/13/string:58:
/usr/include/c++/13/tuple:1919:5: note: candidate: ‘template<class ... _TElements, class ... _UElements> constexpr bool std::operator==(const tuple<_UTypes ...>&, const tuple<_UTypes ...>&)’
 1919 |     operator==(const tuple<_TElements...>& __t,
      |     ^~~~~~~~
/usr/include/c++/13/tuple:1919:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   ‘std::any’ is not derived from ‘const std::tuple<_UTypes ...>’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/locale_facets.h:48,
                 from /usr/include/c++/13/bits/basic_ios.h:37,
                 from /usr/include/c++/13/ios:46:
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note: candidate: ‘template<class _CharT, class _Traits> bool std::operator==(const istreambuf_iterator<_CharT, _Traits>&, const istreambuf_iterator<_CharT, _Traits>&)’
  234 |     operator==(const istreambuf_iterator<_CharT, _Traits>& __a,
      |     ^~~~~~~~
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   ‘std::any’ is not derived from ‘const std::istreambuf_iterator<_CharT, _Traits>’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/map:63,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:5:
/usr/include/c++/13/bits/stl_map.h:1513:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator==(const map<_Key, _Tp, _Compare, _Allocator>&, const map<_Key, _Tp, _Compare, _Allocator>&)’
 1513 |     operator==(const map<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_map.h:1513:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   ‘std::any’ is not derived from ‘const std::map<_Key, _Tp, _Compare, _Allocator>’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/map:64:
/usr/include/c++/13/bits/stl_multimap.h:1134:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator==(const multimap<_Key, _Tp, _Compare, _Allocator>&, const multimap<_Key, _Tp, _Compare, _Allocator>&)’
 1134 |     operator==(const multimap<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_multimap.h:1134:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   ‘std::any’ is not derived from ‘const std::multimap<_Key, _Tp, _Compare, _Allocator>’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/unordered_map:41,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:8:
/usr/include/c++/13/bits/unordered_map.h:2143:5: note: candidate: ‘template<class _Key1, class _Tp1, class _Hash1, class _Pred1, class _Alloc1> bool std::operator==(const unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&, const unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&)’
 2143 |     operator==(const unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/unordered_map.h:2143:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   ‘std::any’ is not derived from ‘const std::unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/unordered_map.h:2157:5: note: candidate: ‘template<class _Key1, class _Tp1, class _Hash1, class _Pred1, class _Alloc1> bool std::operator==(const unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&, const unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&)’
 2157 |     operator==(const unordered_multimap<_Key, _Tp, _Hash, _Pred, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/unordered_map.h:2157:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   ‘std::any’ is not derived from ‘const std::unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/vector:66,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:10:
/usr/include/c++/13/bits/stl_vector.h:2040:5: note: candidate: ‘template<class _Tp, class _Alloc> bool std::operator==(const vector<_Tp, _Alloc>&, const vector<_Tp, _Alloc>&)’
 2040 |     operator==(const vector<_Tp, _Alloc>& __x, const vector<_Tp, _Alloc>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:2040:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:146:24: note:   ‘std::any’ is not derived from ‘const std::vector<_Tp, _Alloc>’
  146 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/ios_base.h:46:
/usr/include/c++/13/system_error:449:3: note: candidate: ‘bool std::operator==(const error_code&, const error_code&)’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:449:32: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_code&’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:465:3: note: candidate: ‘bool std::operator==(const error_code&, const error_condition&)’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:465:32: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_code&’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:480:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_condition&)’
  480 |   operator==(const error_condition& __lhs,
      |   ^~~~~~~~
/usr/include/c++/13/system_error:480:37: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_condition&’
  480 |   operator==(const error_condition& __lhs,
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:517:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_code&)’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:517:37: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_condition&’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:161:63: error: ‘struct Grouped’ has no member named ‘val’
  161 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                                                               ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:161:63: error: ‘struct Grouped’ has no member named ‘val’
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:161:67: error: template argument 1 is invalid
  161 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                                                                   ^
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:161:67: error: template argument 2 is invalid
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:163:28: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  163 |                    __items.push_back(x.val);
      |                            ^~~~~~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:163:40: error: ‘struct Grouped’ has no member named ‘val’
  163 |                    __items.push_back(x.val);
      |                                        ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:159:80:   required from here
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:159:54: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  159 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |                                                    ~~^~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:159:65: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  159 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |                                                               ~~^~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:171:63: error: ‘struct Grouped’ has no member named ‘val’
  171 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                                                               ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:171:63: error: ‘struct Grouped’ has no member named ‘val’
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:171:67: error: template argument 1 is invalid
  171 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                                                                   ^
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:171:67: error: template argument 2 is invalid
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:173:28: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  173 |                    __items.push_back(x.val);
      |                            ^~~~~~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:173:40: error: ‘struct Grouped’ has no member named ‘val’
  173 |                    __items.push_back(x.val);
      |                                        ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:2)> [with auto:2 = int]’:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:170:18:   required from here
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:169:43: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  169 |                  return std::accumulate(v.begin(), v.end(), 0.0);
      |                                         ~~^~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:169:54: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  169 |                  return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                    ~~^~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:158:24: error: no matching function for call to ‘std::vector<std::pair<double, __struct4> >::push_back(<brace-enclosed initializer list>)’
  158 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~^
  159 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  160 |                ([&]() {
      |                ~~~~~~~~ 
  161 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  162 |                  for (auto x : g.items) {
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~
  163 |                    __items.push_back(x.val);
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~
  164 |                  }
      |                  ~      
  165 |                  return __items;
      |                  ~~~~~~~~~~~~~~~
  166 |                })())),
      |                ~~~~~~~  
  167 |            __struct4{
      |            ~~~~~~~~~~   
  168 |                g.key, ([&](auto v) {
      |                ~~~~~~~~~~~~~~~~~~~~~
  169 |                  return std::accumulate(v.begin(), v.end(), 0.0);
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  170 |                })(([&]() {
      |                ~~~~~~~~~~~
  171 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  172 |                  for (auto x : g.items) {
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~
  173 |                    __items.push_back(x.val);
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~
  174 |                  }
      |                  ~      
  175 |                  return __items;
      |                  ~~~~~~~~~~~~~~~
  176 |                })())}});
      |                ~~~~~~~~ 
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::pair<double, __struct4>; _Alloc = std::allocator<std::pair<double, __struct4> >; value_type = std::pair<double, __struct4>]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::pair<double, __struct4> >::value_type&’ {aka ‘const std::pair<double, __struct4>&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = std::pair<double, __struct4>; _Alloc = std::allocator<std::pair<double, __struct4> >; value_type = std::pair<double, __struct4>]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<std::pair<double, __struct4> >::value_type&&’ {aka ‘std::pair<double, __struct4>&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp: In function ‘int main()’:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:184:5: error: conversion from ‘vector<__struct4>’ to non-scalar type ‘vector<Grouped>’ requested
  140 |   std::vector<Grouped> grouped = ([&]() {
      |                                  ~~~~~~~~
  141 |     std::vector<__struct3> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  142 |     for (auto i : items) {
      |     ~~~~~~~~~~~~~~~~~~~~~~
  143 |       auto __key = i.cat;
      |       ~~~~~~~~~~~~~~~~~~~
  144 |       bool __found = false;
      |       ~~~~~~~~~~~~~~~~~~~~~
  145 |       for (auto &__g : __groups) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  146 |         if (__g.key == __key) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~
  147 |           __g.items.push_back(Grouped{i});
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  148 |           __found = true;
      |           ~~~~~~~~~~~~~~~
  149 |           break;
      |           ~~~~~~
  150 |         }
      |         ~
  151 |       }
      |       ~
  152 |       if (!__found) {
      |       ~~~~~~~~~~~~~~~
  153 |         __groups.push_back(__struct3{__key, std::vector<Grouped>{Grouped{i}}});
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  154 |       }
      |       ~
  155 |     }
      |     ~
  156 |     std::vector<std::pair<double, __struct4>> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  157 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  158 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~~
  159 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  160 |                ([&]() {
      |                ~~~~~~~~
  161 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  162 |                  for (auto x : g.items) {
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~
  163 |                    __items.push_back(x.val);
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~
  164 |                  }
      |                  ~
  165 |                  return __items;
      |                  ~~~~~~~~~~~~~~~
  166 |                })())),
      |                ~~~~~~~
  167 |            __struct4{
      |            ~~~~~~~~~~
  168 |                g.key, ([&](auto v) {
      |                ~~~~~~~~~~~~~~~~~~~~~
  169 |                  return std::accumulate(v.begin(), v.end(), 0.0);
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  170 |                })(([&]() {
      |                ~~~~~~~~~~~
  171 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  172 |                  for (auto x : g.items) {
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~
  173 |                    __items.push_back(x.val);
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~
  174 |                  }
      |                  ~
  175 |                  return __items;
      |                  ~~~~~~~~~~~~~~~
  176 |                })())}});
      |                ~~~~~~~~~
  177 |     }
      |     ~
  178 |     std::sort(__items.begin(), __items.end(),
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  179 |               [](auto &a, auto &b) { return a.first < b.first; });
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  180 |     std::vector<__struct4> __res;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  181 |     for (auto &p : __items)
      |     ~~~~~~~~~~~~~~~~~~~~~~~
  182 |       __res.push_back(p.second);
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~
  183 |     return __res;
      |     ~~~~~~~~~~~~~
  184 |   })();
      |   ~~^~
